@@ -1,7 +1,7 @@
 #  File src/library/utils/R/summRprof.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2017 The R Core Team
+#  Copyright (C) 1995-2020 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -62,13 +62,13 @@ summaryRprof <-
     memcounts <- NULL
     umem <- NULL
 
-    repeat({
+    repeat {
 
-       chunk <- readLines(con, n = chunksize)
+        chunk <- readLines(con, n = chunksize)
 
-       if (line.profiling) {
-       	   filenamelines <- grep("^#File [0-9]+: ", chunk)
-       	   if (length(filenamelines)) {
+        if (line.profiling) {
+            filenamelines <- grep("^#File [0-9]+: ", chunk)
+            if (length(filenamelines)) {
        	   	fnum <- as.integer(sub("^#File ([0-9]+): .*", "\\1", chunk[filenamelines]))
        	   	filenames[fnum] <- sub("^#File [0-9]+: ", "", chunk[filenamelines])
        	   	if (basenames) {
@@ -78,40 +78,41 @@ summaryRprof <-
        	   	        tail <- basename(dirnames)
        	   	    	filenames[fnum] <- ifelse(tail == ".", filenames[fnum],
        	   	    	                          paste0(tail, "/", filenames[fnum]))
-       	   	    	# May have Windows-style names here where dirname("c:/") == "c:/"
+                                        # May have Windows-style names here where dirname("c:/") == "c:/"
        	   	    	parent <- dirname(dirnames)
        	   	    	dirnames <- ifelse(dirnames == parent, ".", parent)
        	   	    }
        	   	}
        	   	chunk <- chunk[-filenamelines]
-       	   }
-       }
+            }
+        }
 
-       if (length(chunk) == 0L)
-           break
+        if (length(chunk) == 0L)
+            break
 
-       if (memory.profiling) {
-           memprefix <- attr(regexpr(":[0-9]+:[0-9]+:[0-9]+:[0-9]+:", chunk), "match.length")
-           if (memory == "both") {
-               memstuff <- substr(chunk, 2L, memprefix-1L)
-               memcounts <- pmax(apply(sapply(strsplit(memstuff, ":"), as.numeric), 1, diff), 0)
-	       if (!is.matrix(memcounts)) # Need a matrix result (PR#16395)
-	           memcounts <- matrix(memcounts, nrow = 1)
-               ##  memcounts <- c(0, rowSums(memcounts[, 1L:3L]))
-               ## convert to bytes.
-               memcounts <- c(0, rowSums(cbind(memcounts[, 1L:2L, drop = FALSE] * 8, memcounts[, 3L, drop = FALSE])))
-               rm(memstuff)
-           }
-           chunk <- substr(chunk, memprefix+1L, nchar(chunk,  "c"))
-           if(any((nc <- nchar(chunk, "c")) == 0L)) {
+        if (memory.profiling) {
+            memprefix <- attr(regexpr(":[0-9]+:[0-9]+:[0-9]+:[0-9]+:", chunk), "match.length")
+            if (memory == "both") {
+                memstuff <- substr(chunk, 2L, memprefix-1L)
+                memcounts <- pmax(apply(sapply(strsplit(memstuff, ":"), as.numeric), 1, diff), 0)
+                if (!is.matrix(memcounts)) # Need a matrix result (PR#16395)
+                    memcounts <- matrix(memcounts, nrow = 1)
+                ##  memcounts <- c(0, rowSums(memcounts[, 1L:3L]))
+                ## convert to bytes.
+                memcounts <- c(0, rowSums(cbind(memcounts[, 1L:2L, drop = FALSE] * 8,
+                                                memcounts[, 3L,    drop = FALSE])))
+                rm(memstuff)
+            }
+            chunk <- substr(chunk, memprefix+1L, nchar(chunk,  "c"))
+            if(any((nc <- nchar(chunk, "c")) == 0L)) {
                 chunk <- chunk[nc > 0L]
                 memcounts <- memcounts[nc > 0L]
-           }
-       }
+            }
+        }
 
-       chunk <- strsplit(chunk, " ")
-       if (line.profiling)
-           chunk <- lapply(chunk, function(x) {
+        chunk <- strsplit(chunk, " ")
+        if (line.profiling)
+            chunk <- lapply(chunk, function(x) {
            	locations <- !startsWith(x, '"')
            	if (lines != "hide") {
            	    fnum <- sub("#.*", "", x[locations])
@@ -119,32 +120,34 @@ summaryRprof <-
            	    x[locations] <- paste0(filenames[as.integer(fnum)], "#", lnum)
                 }
            	switch(lines,
-           	    hide = x <- x[!locations],
-           	    show = x <- x[locations]
-           	)
+                       hide = x <- x[!locations],
+                       show = x <- x[locations]
+                       )
        	      	if (length(x)) x else "<no location>"
-       	     })
-       newfirsts <- sapply(chunk,  "[[",  1L)
-       newuniques <- lapply(chunk,  unique)
-       ulen <- lengths(newuniques)
-       newuniques <- unlist(newuniques)
+            })
+        newfirsts <- sapply(chunk,  "[[",  1L)
+        newuniques <- lapply(chunk,  unique)
+        ulen <- lengths(newuniques)
+        newuniques <- unlist(newuniques)
 
-       new.utable <- table(newuniques)
-       new.ftable <- table(factor(newfirsts, levels = names(new.utable)))
-       if (memory == "both")
-           new.umem <- rowsum(memcounts[rep.int(seq_along(memcounts), ulen)], newuniques)
+        new.utable <- table(newuniques)
+        new.ftable <- table(factor(newfirsts, levels = names(new.utable)))
+        if (memory == "both")
+            new.umem <- rowsum(memcounts[rep.int(seq_along(memcounts), ulen)], newuniques)
 
-       fcounts <- rowsum( c(as.vector(new.ftable), fcounts),
-                         c(names(new.ftable), fnames) )
-       ucounts <- rowsum( c(as.vector(new.utable), ucounts),
-                         c(names(new.utable), fnames) )
-       if(memory == "both")
-           umem <- rowsum(c(new.umem, umem), c(names(new.utable), fnames))
+        fcounts <- rowsum(c(as.vector(new.ftable), fcounts),
+                          c(names(new.ftable), fnames) )
+        ucounts <- rowsum(c(as.vector(new.utable), ucounts),
+                          c(names(new.utable), fnames) )
+        if(memory == "both")
+            umem <- rowsum(c(new.umem, umem), c(names(new.utable), fnames))
 
-       fnames <- sort(unique(c(fnames, names(new.utable))))
-    })
+        fnames <- sort(unique(c(fnames, names(new.utable))))
 
-    firstnum <- fcounts*sample.interval
+    } # end{repeat}
+
+
+    firstnum  <- fcounts*sample.interval
     uniquenum <- ucounts*sample.interval
 
     ## sort and form % on unrounded numbers
@@ -159,11 +162,11 @@ summaryRprof <-
     	index3 <- order(filename, linenum)
     }
 
-    firstpct <- round(100*firstnum/sum(firstnum), 2)
+    firstpct  <- round(100*firstnum /sum(firstnum), 2)
     uniquepct <- round(100*uniquenum/sum(firstnum), 2)
 
     digits <- ifelse(sample.interval < 0.01,  3L, 2L)
-    firstnum <- round(firstnum, digits)
+    firstnum  <- round(firstnum,  digits)
     uniquenum <- round(uniquenum, digits)
 
     if (memory == "both") memtotal <-  round(umem/1048576, 1)     ## 0.1MB
@@ -183,8 +186,8 @@ summaryRprof <-
     	result <- c(result, list(by.line = rval[index3,]))
 
     c(result,
-         sample.interval = sample.interval,
-         sampling.time = sum(fcounts)*sample.interval)
+      sample.interval = sample.interval,
+      sampling.time = sum(fcounts)*sample.interval)
 }
 
 Rprof_memory_summary <- function(filename, chunksize = 5000,
@@ -197,67 +200,64 @@ Rprof_memory_summary <- function(filename, chunksize = 5000,
     labels <- vector("list", length(label))
     index <- NULL
 
-    repeat({
+    repeat {
        chunk <- readLines(filename, n = chunksize)
        if (length(chunk) == 0L)
            break
        memprefix <- attr(regexpr(":[0-9]+:[0-9]+:[0-9]+:[0-9]+:", chunk),
                          "match.length")
        memstuff <- substr(chunk, 2L, memprefix-1L)
-       memcounts <- rbind(t(sapply(strsplit(memstuff, ":"), as.numeric)))
+       mcnt <- rbind(t(sapply(strsplit(memstuff, ":"), as.numeric)))
        ## convert to bytes
-       memcounts <- cbind(memcounts[, 1L:2L, drop = FALSE] * 8, memcounts[, 3L:4L, drop = FALSE])
-
+       mcnt <- cbind(mcnt[, 1L:2L, drop = FALSE] * 8,
+                     mcnt[, 3L:4L, drop = FALSE])
        chunk <- substr(chunk, memprefix+1, nchar(chunk,  "c"))
-       if(any((nc <- nchar(chunk,  "c")) == 0L)) {
-           memcounts <- memcounts[nc > 0L, ]
-           chunk <- chunk[nc > 0L]
+       if(any(c0 <- nchar(chunk,  "c") == 0L)) {
+           mcnt  <- mcnt [!c0, ]
+           chunk <- chunk[!c0]
        }
 
+       memcounts <- rbind(memcounts, mcnt)
        chunk <- strsplit(chunk, " ")
 
        if (length(exclude))
-           chunk <- lapply(chunk,  function(l) l[!(l %in% exclude)])
+           chunk <- lapply(chunk, function(l) l[!(l %in% exclude)])
 
-       newfirsts <- sapply(chunk,  "[[",  1L)
+       len.pos <- lengths(chunk) > 0L
+       newfirsts <- sapply(chunk[len.pos], "[[",  1L)
        firsts <- c(firsts, newfirsts)
 
-       if (!aggregate && length(label)){
-           for(i in seq_along(label)){
-
-               if (label[i] == 1)
-                   labels[[i]] <- c(labels[[i]], newfirsts)
-               else if (label[i]>1) {
-                   labels[[i]] <- c(labels[[i]],  sapply(chunk,
-                                                         function(line)
-                                                         paste(rev(line)[1L:min(label[i], length(line))],
-                                                               collapse = ":")))
-               } else {
-                   labels[[i]] <- c(labels[[i]], sapply(chunk,
-                                                        function(line)
-                                                        paste(line[1L:min(-label[i], length(line))],
-                                                              collapse = ":")))
-               }
+       if (!aggregate && length(label)) {
+           for(i in seq_along(label)) {
+               labels[[i]] <- c(labels[[i]],
+                                if (label[i] == 1)
+                                    newfirsts
+                                else if(label[i] > 1)
+                                    sapply(chunk,
+                                           function(line)
+                                               paste(rev(line)[1L:min(label[i], length(line))],
+                                                     collapse = ":"))
+                                else # label[i] < 1
+                                    sapply(chunk,
+                                           function(line)
+                                               paste(line[1L:min(-label[i], length(line))],
+                                                     collapse = ":")))
            }
        } else if (aggregate) {
-           if (aggregate > 0) {
-               index <- c(index,  sapply(chunk,
-                                         function(line)
-                                         paste(rev(line)[1L:min(aggregate, length(line))],
-                                               collapse = ":")))
+           index <- c(index,
+                      sapply(chunk,
+                             if(aggregate > 0)
+                                 function(line)
+                                     paste(rev(line)[1L:min(aggregate, length(line))], collapse = ":")
 
-           } else {
-               index <- c(index,  sapply(chunk,
-                                         function(line)
-                                         paste(line[1L:min(-aggregate, length(line))],
-                                               collapse = ":")))
-           }
+                             else # aggregate < 0
+                                 function(line)
+                                     paste(line[1L:min(-aggregate, length(line))],     collapse = ":")))
        }
-
 
        if (length(chunk) < chunksize)
            break
-    })
+    }
 
     if (length(memcounts) == 0L) stop("no events were recorded")
 
@@ -273,19 +273,21 @@ Rprof_memory_summary <- function(filename, chunksize = 5000,
         memcounts[-1L, 1L:3L]  <-  pmax(0L, apply(memcounts[, 1L:3L], 2L, diff))
 
     if (aggregate)
-        memcounts <- by(memcounts, index,
-                        function(these) with(these,
-                                             round(c(vsize.small = mean(vsize.small),
-                                                     max.vsize.small = max(vsize.small),
-                                                     vsize.large = mean(vsize.large),
-                                                     max.vsize.large = max(vsize.large),
-                                                     nodes = mean(nodes),
-                                                     max.nodes = max(nodes),
-                                                     duplications = mean(duplications),
-                                                     tot.duplications = sum(duplications),
-                                                     samples = nrow(these)
-                                                     ))
-                                             )
-                        )
-    return(memcounts)
+        by(memcounts, index,
+           function(these)
+               with(these,
+                    round(c(vsize.small = mean(vsize.small),
+                            max.vsize.small = max(vsize.small),
+                            vsize.large = mean(vsize.large),
+                            max.vsize.large = max(vsize.large),
+                            nodes = mean(nodes),
+                            max.nodes = max(nodes),
+                            duplications = mean(duplications),
+                            tot.duplications = sum(duplications),
+                            samples = nrow(these)
+                            ))
+                    )
+           )
+    else
+        memcounts
 }
